Migrate to Hibernate 6.3